Fix ripple effect doesn't show on ios
Fixes #65

--- a/client/src/pages/game/operation/map/Map.module.css
+++ b/client/src/pages/game/operation/map/Map.module.css
@@ -4,7 +4,7 @@
 	height: 10px;
 	opacity: 0;
 	transform: scale(0);
-	background: rgb(150, 69, 62, 0.5);
+	background: rgba(150, 69, 62, 0.5);
 	border-radius: 50%;
 	position: fixed;
 	z-index: 1;
